Fix layout issues.

--- a/FrontEnd/style.css
+++ b/FrontEnd/style.css
@@ -92,3 +92,7 @@ img {
 .ui-dialog {
 	background: black;
 }
+
+.ui-draggable-dragging {
+	z-index: 50;
+}
